improve models and tests of orders, update swagger adding create order
