# apps/YLunchApi.Main/wwwroot/swagger-original.yaml
@@ -666,7 +666,7 @@ paths:
                 title: "NotFound"
                 statusCode: 404
                 errors:
-                  reasons: ["Restaurant: `<ID>` not found."]
+                  reasons: ["Restaurant: a00000e0-aaa0-000a-0000-00e00aa00e00 not found."]
   /restaurants/{restaurantId}/products:
     post:
       tags:
@@ -728,7 +728,7 @@ paths:
                 title: "NotFound"
                 statusCode: 404
                 errors:
-                  reasons: ["Restaurant: `<ID>` not found."]
+                  reasons: ["Restaurant: a00000e0-aaa0-000a-0000-00e00aa00e00 not found."]
         '409':
           description: |
             Conflict
@@ -807,7 +807,7 @@ paths:
                 title: "NotFound"
                 statusCode: 404
                 errors:
-                  reasons: ["Restaurant: `<ID>` not found."]
+                  reasons: ["Restaurant: a00000e0-aaa0-000a-0000-00e00aa00e00 not found."]
   /products/{productId}:
     get:
       tags:
@@ -855,7 +855,77 @@ paths:
                 title: "NotFound"
                 statusCode: 404
                 errors:
-                  reasons: ["Product: `<ID>` not found."]
+                  reasons: ["Product: a00000e0-aaa0-000a-0000-00e00aa00e00 not found."]
+  /restaurants/{restaurantId}/orders:
+    post:
+      tags:
+        - orders
+      summary: Order creation
+      description: |
+        - Authorization header: **yes**
+        - Granted roles:
+          - Customer
+      operationId: addOrder
+      parameters:
+        - in: path
+          name: restaurantId
+          required: true
+          description: The id of the restaurant in where you want to order
+          schema:
+            type: string
+      requestBody:
+        description: Order to create
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrderCreateDto'
+      responses:
+        '201':
+          description: order created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderReadDto'
+        '400':
+          description: |
+            Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDto'
+              examples:
+                ValidationError:
+                  value:
+                    title: "One or more validation errors occurred."
+                    statusCode: 400
+                    errors:
+                      Name: [ "The Name field is required." ]
+                Other:
+                  value:
+                    title: "BadRequest"
+                    statusCode: 400
+                    errors:
+                      reasons: ["Something went wrong, please try again later."]
+        '404':
+          description: |
+            Not found:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDto'
+              examples:
+                RestaurantNotFound:
+                  value:
+                    title: "NotFound"
+                    statusCode: 404
+                    errors:
+                      reasons: ["Restaurant: a00000e0-aaa0-000a-0000-00e00aa00e00 not found."]
+                ProductNotFound:
+                  value:
+                    title: "NotFound"
+                    statusCode: 404
+                    errors:
+                      reasons: ["Product: a00000e0-aaa0-000a-0000-00e00aa00e00 not found."]
 components:
   schemas:
     MessageDto:
@@ -1296,6 +1366,9 @@ components:
         id:
           type: string
           example: a00000e0-aaa0-000a-0000-00e00aa00e00
+        restaurantId:
+          type: string
+          example: a00000e0-aaa0-000a-0000-00e00aa00e00
         name:
           type: string
           example: my product
@@ -1327,6 +1400,9 @@ components:
             - `4`: Menu,
             - `5`: Daily,
             - `6`: Other
+        creationDateTime:
+          type: string
+          example: "2021-12-31T00:00:00.000000"
         expirationDateTime:
           type: string
           example: "2021-12-31T00:00:00.000000"
@@ -1342,6 +1418,156 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ProductTagReadDto'
+    OrderedProductReadDto:
+      type: object
+      properties:
+        id:
+          type: string
+          example: a00000e0-aaa0-000a-0000-00e00aa00e00
+        productId:
+          type: string
+          example: a00000e0-aaa0-000a-0000-00e00aa00e00
+        restaurantId:
+          type: string
+          example: a00000e0-aaa0-000a-0000-00e00aa00e00
+        orderId:
+          type: string
+          example: a00000e0-aaa0-000a-0000-00e00aa00e00
+        userId:
+          type: string
+          example: a00000e0-aaa0-000a-0000-00e00aa00e00
+        name:
+          type: string
+          example: my product
+        description:
+          type: string
+          example: my ingredients
+        price:
+          type: number
+          example: 9.8
+        productType:
+          type: number
+          example: 0
+          description: |
+            One of:
+            - `0`: Starter,
+            - `1`: Main,
+            - `2`: Dessert,
+            - `3`: Drink,
+            - `4`: Menu,
+            - `5`: Daily,
+            - `6`: Other
+        creationDateTime:
+          type: string
+          example: "2021-12-31T00:00:00.000000"
+        expirationDateTime:
+          type: string
+          example: "2021-12-31T00:00:00.000000"
+        image:
+          type: string
+          description: Base 64 encoded image
+          example: 'data:image/png;base64,iVBORw0KGgoAAA...'
+    OrderStatusReadDto:
+      type: object
+      properties:
+        id:
+          type: string
+          example: a00000e0-aaa0-000a-0000-00e00aa00e00
+        orderId:
+          type: string
+          example: a00000e0-aaa0-000a-0000-00e00aa00e00
+        orderState:
+          type: number
+          example: 0
+          description: |
+            One of:
+            - `0`: Idling,
+            - `1`: Acknowledged,
+            - `2`: InPreparation,
+            - `3`: Ready,
+            - `4`: Delivered,
+            - `5`: Other,
+            - `6`: Cancelled,
+            - `7`: Rejected
+        dateTime:
+          type: string
+          example: "2021-12-31T00:00:00.000000"
+    OrderCreateDto:
+      type: object
+      properties:
+        productIds:
+          type: array
+          items:
+            type: string
+            example: a00000e0-aaa0-000a-0000-00e00aa00e00
+        reservedForDateTime:
+          type: string
+          example: "2021-12-31T00:00:00.000000"
+          description: 'Must be in future and within restaurant order opening times'
+        customerComment:
+          type: string
+          example: 'without onions'
+      required:
+        - productIds
+        - reservedForDateTime
+    OrderReadDto:
+      type: object
+      properties:
+        id:
+          type: string
+          example: a00000e0-aaa0-000a-0000-00e00aa00e00
+        userId:
+          type: string
+          example: a00000e0-aaa0-000a-0000-00e00aa00e00
+        restaurantId:
+          type: string
+          example: a00000e0-aaa0-000a-0000-00e00aa00e00
+        totalPrice:
+          type: number
+          example: 19.6
+        creationDateTime:
+          type: string
+          example: "2021-12-31T00:00:00.000000"
+        reservedForDateTime:
+          type: string
+          example: "2021-12-31T00:00:00.000000"
+        acceptationDateTime:
+          type: string
+          example: "2021-12-31T00:00:00.000000"
+        customerComment:
+          type: string
+          example: 'without onions'
+        restaurantComment:
+          type: string
+          example: 'ok, we remove onions'
+        isAcknowledged:
+          type: boolean
+          description: |
+            - `True` if the restaurant is aware of the order
+            - `False` if the restaurant is not aware of the order
+          example: true
+        isAccepted:
+          type: boolean
+          description: |
+            - `True` if the restaurant has accepted the order
+            - `False` if the restaurant has not accepted the order
+          example: true
+        isDeleted:
+          type: boolean
+          description: |
+            - `True` if the order is processed
+            - `False` if the order is still processing
+          example: true
+        CurrentOrderStatus:
+          $ref: '#/components/schemas/OrderStatusReadDto'
+        OrderStatuses:
+          type: array
+          items:
+            $ref: '#/components/schemas/OrderStatusReadDto'
+        OrderedProducts:
+          type: array
+          items:
+            $ref: '#/components/schemas/OrderedProductReadDto'
   securitySchemes:
     Bearer:
       type: http
