# src/YLunchApi.Application/RestaurantAggregate/OrderService.cs
@@ -79,6 +79,9 @@ public class OrderService : IOrderService
                                                 Description = x.Description,
                                                 Price = x.Price,
                                                 CreationDateTime = x.CreationDateTime,
+                                                ExpirationDateTime = x.ExpirationDateTime,
+                                                ProductType = x.ProductType,
+                                                Image = x.Image,
                                                 Allergens = string.Join(",", x.Allergens.OrderBy(y => y.Name).Select(y => y.Name)),
                                                 ProductTags = string.Join(",", x.ProductTags.OrderBy(y => y.Name).Select(y => y.Name))
                                             };
