# src/YLunchApi.Domain/RestaurantAggregate/Dto/OrderedProductReadDto.cs
@@ -1,4 +1,5 @@
 using YLunchApi.Domain.CommonAggregate.Dto;
+using YLunchApi.Domain.RestaurantAggregate.Models.Enums;
 
 namespace YLunchApi.Domain.RestaurantAggregate.Dto;
 
@@ -13,6 +14,9 @@ public class OrderedProductReadDto : EntityReadDto
     public string Description { get; set; } = null!;
     public double Price { get; set; }
     public DateTime CreationDateTime { get; set; }
+    public DateTime? ExpirationDateTime { get; set; }
+
+    public ProductType ProductType { get; set; }
 
     public string Allergens { get; set; } = null!;
     public string ProductTags { get; set; } = null!;
